<resources>
    <string name="app_name">MarketV1</string>
    <string name="market">Tienda</string>
    <string name="Acceder">Iniciar sesión</string>
    <string name="login">Inicio Sesión</string>
    <string name="Usuario">Usuario</string>
    <string name="Contraseña">Contraseña</string>
    <string name="Comprar">Comprar</string>
    <string name="Vender">Vender</string>
    <string name="tituloVender">Mis productos en venta</string>
    <string name="ProductosEnVenta">Productos en venta</string>
    <string name="crearcuenta">Crear cuenta</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="email">correo electrónico</string>
    <string name="add">Añadir</string>
    <string name="nombre">Nombre</string>
    <string name="precio">Precio</string>
    <string name="descripcion">Descripción</string>
    <string name="estado">Estado</string>
    <string name="tiempo">Tiempo</string>
    <string name="action_usuario">action_usuario</string>
    <string name="boton_cancelar">Cancelar</string>
    <string name="boton_guardar">guardar</string>
    <string name="dinero">dinero</string>
    <string name="usuario_editar_titulo">Editar Usuario</string>
    <string name="usuario_editar_confirmacion">Usuario modificada</string>
    <string name="cambiarClave">Cambiar contraseña</string>
    <string name="action_settings">Configuracion</string>
    <string name="action_mapa">Mapa</string>
    <string name="musica">Música</string>
    <string name="escucharMusica">Escuchar música caracteristica de la aplicación</string>
    <string name="idiomaAplicacion">idioma de la apliación</string>
    <string name="idioma">Elige tu idioma</string>
    <string name="indicarIdioma">Indica el idioma</string>
    <string name="tipoLetra">Tipo de fuente</string>
    <string name="IndicarLetra">fuente</string>
    <string name="fuente">Elige el tipo de fuente que más te guste</string>
    <string name="colorBotones">Color Botones</string>
    <string name="eligeColorBotones">Personalizar el color de los botones</string>
    <string name="IndicarColorFondo">color</string>
    <string name="claveVieja">Contraseña actual</string>
    <string name="claveNueva">Nueva contraseña</string>

</resources>