<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/ligth"
    android:layout_height="match_parent"
    tools:context=".activities.CambiarClaveActivity">

    <include android:id="@+id/appbar"
        layout="@layout/toolbar"/>


    <TextView
        android:id="@+id/textCambiarClave"
        style="@style/titulo1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cambiarClave"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/appbar"
        app:layout_constraintVertical_bias="0.094" />

    <EditText
        android:id="@+id/editVieja"
        style="@style/edits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="12"
        android:password="true"
        android:hint="@string/claveVieja"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textCambiarClave"
        app:layout_constraintVertical_bias="0.181" />

    <EditText
        android:id="@+id/editNueva"
        style="@style/edits"
        android:password="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="12"
        android:hint="@string/claveNueva"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editVieja"
        app:layout_constraintVertical_bias="0.256" />

    <Button
        android:id="@+id/btnCambiarClave"
        style="@style/botones1"
        android:text="@string/boton_guardar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editNueva" />

</androidx.constraintlayout.widget.ConstraintLayout>