<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ligth"
    tools:context="edbeca.simarro.marketv1.activities.UsuarioActivity" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <include android:id="@+id/appbar"
            layout="@layout/toolbar" />

        <TextView
            android:padding="10dp"
            style="@style/edits"
            android:id="@+id/tNombre"
            android:layout_marginTop="20sp"
            android:textAlignment="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombre"
            android:layout_below="@+id/appbar"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:padding="10dp"
            android:id="@+id/editNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/tNombre"
            android:ems="10" />

        <TextView
            android:padding="10dp"
            android:id="@+id/tPassword"
            style="@style/edits"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Contraseña"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_below="@+id/editNombre"
            android:layout_marginTop="20dp" />

        <EditText
            android:padding="10dp"
            android:id="@+id/editPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/tPassword"
            android:ems="10"
            android:inputType="textMultiLine">
        </EditText>

        <TextView
            android:padding="10dp"
            android:id="@+id/tEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            style="@style/edits"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_below="@+id/editPassword"
            android:layout_marginTop="20dp" />

        <EditText
            android:padding="10dp"
            android:id="@+id/editEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/tEmail"
            android:ems="10">
        </EditText>

        <TextView
            android:padding="10dp"
            android:id="@+id/tDinero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dinero"
            style="@style/edits"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_below="@+id/editEmail"
            android:layout_marginTop="20dp" />

        <EditText
            android:padding="10dp"
            android:id="@+id/editDinero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/tDinero"
            android:ems="10">
        </EditText>

        <LinearLayout
            android:id="@+id/botonera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/editDinero"
            android:gravity="center"
            android:orientation="horizontal" >

            <Button
                android:layout_marginTop="20dp"
                android:id="@+id/boton_cancelar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/BotonesNormal"
                android:text="@string/boton_cancelar" />
            <Button
                android:layout_marginTop="20dp"
                android:id="@+id/boton_guardar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/BotonesNormal"
                android:text="@string/boton_guardar" />

        </LinearLayout>

    </RelativeLayout>
</ScrollView>